# robotframework-browser-translation

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  robot.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: on-push.yml  release.yml
atest/: json_lib.py  translation.robot  translation_compare_lib.py  translation_de.robot  translation_fi.robot
robotframework_browser_translation/: __init__.py  translation.json  translation_de.json  translation_fi.json
robotframework_browser_translation_fi/: __init__.py  translation.json
utest/: test_translation.py
